--- a/pickingMovies.html
+++ b/pickingMovies.html
@@ -61,7 +61,7 @@
               movieYear = movie.Year;
               movieID = movie.imdbID;
               ratings = movie.Ratings;
-                          div.innerHTML = "<div class='card'><img class='card-img-top' src="+movieImage+"><div class='card-body'><h5 class='card-title'>"+movieTitle+"</h5><p class='card-text'>"+movieYear+"</p><a href=singleMovie.html?"+movieID+" class='btn btn-primary'>More Information</a></div>";
+                          div.innerHTML = "<div class='card'><img class='card-img-top' src="+movieImage+"><div class='card-body'><h5 class='card-title'>"+movieTitle+"</h5><p class='card-text'>"+movieYear+"</p><a href=singlemovie.html?"+movieID+" class='btn btn-primary'>More Information</a></div>";
             append(movieContainer, div);
           })
         })
