--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               movieTitle = movie.Title;
               movieYear = movie.Year;
               movieID = movie.imdbID;
-            div.innerHTML = "<div class='card'><img class='card-img-top' src="+movieImage+"><div class='card-body'><h5 class='card-title'>"+movieTitle+"</h5><p class='card-text'>"+movieYear+"</p><a href=https://azdolan.github.io/pickingMovies/singleMoive.html?"+movieID+" class='btn btn-primary'>More Information</a></div>";
+            div.innerHTML = "<div class='card'><img class='card-img-top' src="+movieImage+"><div class='card-body'><h5 class='card-title'>"+movieTitle+"</h5><p class='card-text'>"+movieYear+"</p><a href="https://azdolan.github.io/pickingMovies/singleMoive.html?"+movieID+" class='btn btn-primary'>More Information</a></div>";
             append(movieContainer, div);
           })
         })
